# llguidance

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  blog.html  index.html  llg-brr.html  llg-go-brrr.html  package-lock.json  package.json  pyproject.toml  to_html.js
.github/workflows/: build-all.yml  code-coverage.yml  docs.yml  json-schema-tests.yml  json_test_suite.yml  lint.yml  rust-tests.yml  rust.yml  wheels.yml
c_sample/: c_sample.cpp
cbison/: Makefile  cbison.hpp  cbison.rs  cbison_api.h  gen.sh  test_cbison.cpp
cbison/cbison/: __init__.py  bindings.py  matcher.py  test_llg.py
cbison2/: Makefile  README.md  cbison.hpp  test_cbison.cpp
cbison2/cbison/: test_llg.py
docs/: code_nodes.md  de_recursing.md  fast_forward.md  json_schema.md  optimizations.md  parametric.md  syntax.md
docs/blog/: README.md  lexer.py  mermaid.json  package-lock.json  to_html.js
docs/blog/img/: gen-mask_plot.py
json_schema_test_suite/: Cargo.toml  README.md  expected_json_schema_test_suite.json
json_schema_test_suite/src/: main.rs
json_stats/: Cargo.toml  expected_maskbench.json  jstats.sh
json_stats/src/: json_stats.rs  stats.rs
json_test_suite/: Cargo.toml
json_test_suite/data/: baseline_test_suite_results.json
json_test_suite/scripts/: analysis.py
json_test_suite/src/: cases.rs  main.rs  results.rs  run.rs
llg_test_utils/: Cargo.toml  README.md
llg_test_utils/src/: acceptance.rs  lib.rs  rng_utils.rs  trace_check.rs
llguidance_cbison/: Cargo.toml  cbindgen.toml  llguidance_cbison.h
llguidance_cbison/src/: cb_impl.rs  cbison.rs  lib.rs
parser/: Cargo.toml  build.rs  cbindgen.toml  llguidance.h
parser/cxx/: llguidance_cxx.cc  llguidance_cxx.h  llguidance_cxx_fwd.h  llguidance_cxx_gen.cc  llguidance_cxx_gen.h  llguidance_cxx_support.cc  llguidance_cxx_support.h
parser/src/: api.rs  cbison.rs  cxx_ffi.rs  factory.rs  ffi.rs  grammar_builder.rs  lib.rs  lightconstraint.rs  matcher.rs  stop_controller.rs  tokenparser.rs
parser/src/earley/: from_guidance.rs  lexer.rs  lexerspec.rs  parser.rs  regexvec.rs  slicer.rs
parser/src/json/: compiler.rs  schema.rs  shared_context.rs
parser/src/lark/: ast.rs  compiler.rs  lexer.rs  mod.rs  parser.rs
parser/tests/: test_bias_cache.rs  test_json_arrays.rs  test_json_enum_const.rs  test_json_objects.rs  test_json_primitives.rs  test_json_schema_combinations.rs  test_json_string_format.rs  test_json_x_guidance.rs  test_lark.rs  test_ll.rs  test_raw_parser.rs  test_stop.rs
parser/tests/llg_test_utils/: acceptance.rs  mod.rs  trace_check.rs
python/: mypy.ini
python/llguidance/: __init__.py  _grammar_from.py  _lib.pyi  _struct_tag.py  _tokenizer.py  cli.py  gbnf_to_lark.py  hf.py  llamacpp.py  mlx.py  numpy.py  tiktoken.py  torch.py
python/torch_tests/: test_bitmask.py  test_hf.py  test_llamacpp.py  test_matcher.py  test_tiktoken.py
python_ext/: Cargo.toml
python_ext/src/: lib.rs  llamatokenizer.rs  llinterpreter.rs  llmatcher.rs  parserlimits.rs  py.rs  pyjson.rs
sample_parser/: Cargo.toml  README.md
sample_parser/data/: constnewline.schema.json
sample_parser/data/from-llama.cpp/: vllm-sql.gbnf
sample_parser/src/: lib.rs  minimal.rs  sample_parser.rs
sample_parser/tests/: common_lark_utils.rs  test_json_arrays.rs  test_json_enum_const.rs  test_json_objects.rs  test_json_primitives.rs  test_json_schema_combinations.rs  test_json_string_format.rs  test_lark.rs  test_ll.rs  test_raw_parser.rs
sample_parser/tests/common_lark_utils/: mod.rs
sample_parser/tests/json/: test_basic.rs
sample_parser/tests/py/: ok0.py  simple_py.lark
scripts/: bump.py  cbindgen.sh  checklinks.py  ci-publish.py  cxxbridge.sh  gen-testcase.py  install-deps.sh  json_tests.py  rust_size.py  test-guidance.sh  tokenizer_test.py  update-git.py
toktrie/: Cargo.toml
toktrie/src/: lib.rs  tokenv.rs  toktree.rs
toktrie_hf_downloader/: Cargo.toml
toktrie_hf_downloader/src/: lib.rs
toktrie_hf_tokenizers/: Cargo.toml
toktrie_hf_tokenizers/src/: lib.rs
toktrie_tiktoken/: Cargo.toml
toktrie_tiktoken/src/: lib.rs
