[package]
name = "llg_test_utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
llguidance = { workspace = true }
toktrie_hf_downloader = { workspace = true }
lazy_static = "1.5.0"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
anyhow = "1.0.95"
rand = { workspace = true }
