[package]
name = "llguidance_cbison"
version = "0.1.0"
edition = "2021"

[dependencies]
llguidance = { workspace = true }
toktrie_hf_tokenizers = { workspace = true }
anyhow = "1.0.95"
lazy_static = "1.5.0"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
rayon = { version = "1.10.0", optional = true }

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[lib]
crate-type = ["cdylib", "rlib"]
