[package]
name = "llguidance_py"
version = "0.7.13"
edition = "2021"
license = "MIT"
description = "Super-fast Structured Outputs"
repository = "https://github.com/guidance-ai/llguidance"

[dependencies]
llguidance = { workspace = true }
toktrie_hf_tokenizers = { workspace = true }
bytemuck = "1.21.0"
pyo3 = {version = "0.24.1", features = ["extension-module", "abi3-py39", "anyhow"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rayon = "1.10.0"
anyhow = "1.0.95"

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"
