[package]
name = "toktrie_hf_tokenizers"
version = "1.1.2"
edition = "2021"
license = "MIT"
description = "HuggingFace tokenizers library support for toktrie and llguidance"
repository = "https://github.com/guidance-ai/llguidance"

[dependencies]
toktrie = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
tokenizers = { version = "0.21.2", default-features = false, features = [
    "unstable_wasm",
    "fancy-regex",
] }
log = "0.4.25"
