[package]
name = "toktrie_tiktoken"
version = "1.7.0"
edition = "2021"
license = "MIT"
description = "tiktoken (OpenAI BPE) library support for toktrie and llguidance"
repository = "https://github.com/guidance-ai/llguidance"
rust-version.workspace = true

[dependencies]
toktrie = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
log = "0.4.25"
tiktoken-rs = "0.7.0"
